--- a/MegaProject.Repository/MegaProject.Repository.csproj
+++ b/MegaProject.Repository/MegaProject.Repository.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="BCrypt" Version="1.0.0" />
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+      <PackageReference Include="EPPlus" Version="7.7.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
         <PrivateAssets>all</PrivateAssets>
